--- a/hw01/index.html
+++ b/hw01/index.html
@@ -159,8 +159,8 @@ img:hover {
       1. Code bug list: (1)掃描稿紙實測需600dpi以上 (2)稿紙頁碼問題 (3)稿紙檔案命名問題 (4)CP950和Unicode對應問題<br>
       2. Envs bug list: (1)Unet model只在python3.7和Tensorflow1.14正常工作 (2)實測只在RTX2080顯卡執行訓練成功<br>
       3. 建議Unet改Pytorch訓練, Tensorflow相容性問題多, 1.XX版已不維護，問題難解決。 (參考https://github.com/EuphoriaYan/zi2zi-pytorch)<br>
-      4. 建議教材課前公告，學生可在課前先安裝環境，節省上課時間浪費。<br>
-      5. 建議作業課前公告，學生可在課前先嘗試和嘗試，節省上課時間浪費。<br>
+      4. 建議教材課前公告，學生可在課前先安裝環境，上課時應該可以學到更多。<br>
+      5. 建議作業課前公告，學生可在課前先嘗試練習，上課時應該可以學到更多。<br>
     </div>
   </div>
 
