--- a/hw02/index.html
+++ b/hw02/index.html
@@ -150,7 +150,10 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      第一次使用3D Slicer進行心臟CT圖像修補學習。
+      3D Slicer是一個功能強大的醫學影像處理軟件，它提供了三維重建和分析的工具方面。在處理心臟CT圖像時，體會到了將平面圖像轉化為立體模型的挑戰，同時也感受到了從不同角度觀察心臟結構的驚奇。
+透過3D Slicer，更深入理解心臟的解剖結構，學習到如何準確地標定和修補圖像中的特定區域。這對於醫學研究或臨床診斷是基礎的第一步。例如熟悉軟件界面或調整適當的參數設置，比較複雜，需要時間摸索。
+此外，結合AI和機器學習技術，在圖像辨識方面的知識和技能將使醫學診斷和治療更加容易。
     </div>
   </div>
 
